# codex

./: .env.example  .gitignore  .lintstagedrc.json  README.md  compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
.ruler/: architecture.md  backend.md  frontend.md  project.md
apps/api/: package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0537c969580e_add_resource_type.py  12a81fee679b_add_collection_permissions.py  1f94d6f7fc3f_add_user_ai_preference.py  1fc85a0f8c78_add_collection_id_to_documents.py  237631b63450_add_document_tagging.py  433902e02bd0_add_file.py  7893afe17274_add_document_and_knowledge_graph.py  7f0a154290d6_add_chunk.py  8c2bd1b641f3_add_collection_and_collection_audits.py  a3235e2c5bff_add_document_audit.py  af31a6fa90c5_add_user_account_session.py  ba4694f23a85_remove_create_at_and_update_at.py  befe5f32dce6_add_unique_constraint_to_collection_ai_.py  cc331805ccbc_add_unique_ai_preference.py  d04fb4666d74_add_collection_ai_preference.py
apps/api/app/: config.py  db.py  main.py
apps/api/app/utils/: color.py  response.py
apps/api/app/v1/: __init__.py
apps/api/app/v1/collection/: dependencies.py  router.py  schemas.py  service.py
apps/api/app/v1/document/: dependencies.py  router.py  schemas.py  service.py
apps/api/app/v1/health/: router.py
apps/api/app/v1/models/: __init__.py  collection.py  document.py  enum.py  file.py  knowledge_graph.py  user.py
apps/api/app/v1/schemas/: graph.py
apps/api/app/v1/storage/: dependencies.py  router.py  schemas.py  service.py
apps/api/app/v1/user/: __init__.py  dependencies.py  router.py  schemas.py  service.py
apps/web/: package.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: base-node.tsx  sign-out.tsx
apps/web/src/components/data-table/: advanced-toolbar.tsx  date-filter.tsx  faceted-filter.tsx  filter-menu.tsx  header.tsx  (+4 more)
apps/web/src/fonts/: index.ts
apps/web/src/hooks/: use-data-table.ts  use-graph.tsx
apps/web/src/lib/: utils.ts
apps/web/src/provider/: query.tsx
apps/web/src/store/: user.tsx
apps/web/src/types/: data-table.ts  form.ts
(+90 files in other folders)
