[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "bcrypt>=4.3.0",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.3.0",
    "minio>=7.2.16",
    "jsonschema>=4.25.0",
    "scalar-fastapi>=1.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "ty>=0.0.1a17",
]

[tool.ty.src]
exclude = ["alembic"]
